<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CsvActivity">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/screen_margin"
        android:paddingEnd="@dimen/screen_margin"
        android:paddingBottom="@dimen/scroll_bottom_space"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/input1"
            android:layout_width="257dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_sequence_name"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="54dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/input2"
            android:layout_width="257dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_calibration_data_name"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="54dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    <Button
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_image"/>

        <Button
            android:id="@+id/autoFol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_detect_csv" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    <Button
        android:id="@+id/opencsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_sensitivity_csv"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/screen_margin_negative"
            android:layout_marginEnd="@dimen/screen_margin_negative"
            android:scaleType="centerCrop"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/brightness_txt"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />
            <SeekBar
                android:id="@+id/brightness_bar"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:min="-20"
                android:max="40"
                android:progress="0" />
        </LinearLayout>

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50" />

    <SeekBar
        android:id="@+id/sb1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:min="300"
        android:max="550"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="125dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_csv"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="657dp" />

    </LinearLayout>

    </ScrollView>



    <FrameLayout
        tools:ignore="MissingConstraints"
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#000000">
        <ImageView
            android:id="@+id/line_view"
            android:layout_width="3px"
            android:layout_height="220dp"
            android:background="#FF0000" />
    </FrameLayout>
<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/home_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="32dp"
    android:contentDescription="@string/back"
    app:srcCompat="@drawable/ic_home" 
    app:layout_constraintBottom_toBottomOf="parent"
    app:fabSize="mini"
    app:maxImageSize="30dp"
    app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
