<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalibActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/input1"
            android:layout_width="257dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_sequence_name"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="54dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/input2"
            android:layout_width="257dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_calibration_data_name"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="54dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <Button
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_image"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="54dp" />

        <Button
            android:id="@+id/autoCalib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Auto Detect (Fol &amp; Peaks)"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="54dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/iv1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:scaleType="centerCrop"
                app:srcCompat="@android:drawable/ic_menu_gallery" />
            <ImageView
                android:id="@+id/iv2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:scaleType="centerCrop"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/brightness_txt"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />
            <SeekBar
                android:id="@+id/brightness_bar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:min="-20"
                android:max="40"
                android:progress="0" />
        </LinearLayout>





        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50" />
        <SeekBar
            android:id="@+id/sb1"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:min="350"
            android:max="600"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <SeekBar
                android:id="@+id/sb2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:min="1800"
                android:max="2900"
                android:layout_weight="0.8"
                app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                android:id="@+id/c1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:inputType="numberDecimal"
                android:text="435.8"
                android:hint="@string/hint_nm"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <SeekBar
                android:id="@+id/sb3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:min="1800"
                android:max="2900"
                android:layout_weight="0.8"
                app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                android:id="@+id/c2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:inputType="numberDecimal"
                android:text="546.1"
                android:hint="@string/hint_nm"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

        <TextView
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <SeekBar
                android:id="@+id/sb4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:min="1800"
                android:max="2900"
                android:layout_weight="0.8"
                app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                android:id="@+id/c3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:inputType="numberDecimal"
                android:text="588.0"
                android:hint="@string/hint_nm"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

        <TextView
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <SeekBar
                android:id="@+id/sb5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:min="1800"
                android:max="2900"
                android:layout_weight="0.8"
                app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                android:id="@+id/c4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:inputType="numberDecimal"
                android:text="611.6"
                android:hint="@string/hint_nm"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_lines_label" />

        <TextView
            android:id="@+id/t6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <CheckBox
                android:id="@+id/extra_check1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <SeekBar
                android:id="@+id/sb6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:min="1800"
                android:max="2900"
                android:layout_weight="0.8"/>
            <EditText
                android:id="@+id/c5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:inputType="numberDecimal"
                android:text="404.7"
                android:hint="@string/hint_nm"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

        <TextView
            android:id="@+id/t7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <CheckBox
                android:id="@+id/extra_check2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <SeekBar
                android:id="@+id/sb7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:min="1800"
                android:max="2900"
                android:layout_weight="0.8"/>
            <EditText
                android:id="@+id/c6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:inputType="numberDecimal"
                android:text="631.1"
                android:hint="@string/hint_nm"
                android:textColor="#FFFFFF"/>
        </LinearLayout>





        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_csv"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="657dp" />

    </LinearLayout>

    </ScrollView>



    <FrameLayout
        tools:ignore="MissingConstraints"
        android:id="@+id/l1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#000000">
        <ImageView
            android:id="@+id/line_view1"
            android:layout_width="3px"
            android:layout_height="220dp"
            android:background="#FF0000" />
    </FrameLayout>
    <FrameLayout
        tools:ignore="MissingConstraints"
        android:id="@+id/l2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#000000">
        <ImageView
            android:id="@+id/line_view2"
            android:layout_width="3px"
            android:layout_height="220dp"
            android:background="#FF00FF" />
    </FrameLayout>
    <FrameLayout
        tools:ignore="MissingConstraints"
        android:id="@+id/l3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#000000">
        <ImageView
            android:id="@+id/line_view3"
            android:layout_width="3px"
            android:layout_height="220dp"
            android:background="#0000FF" />
    </FrameLayout>
    <FrameLayout
        tools:ignore="MissingConstraints"
        android:id="@+id/l4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#000000">
        <ImageView
            android:id="@+id/line_view4"
            android:layout_width="3px"
            android:layout_height="220dp"
            android:background="#00FF00" />
    </FrameLayout>
    <FrameLayout
        tools:ignore="MissingConstraints"
        android:id="@+id/l5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#000000">
        <ImageView
            android:id="@+id/line_view5"
            android:layout_width="3px"
            android:layout_height="220dp"
            android:background="#FF0000" />
    </FrameLayout>
    <FrameLayout
        tools:ignore="MissingConstraints"
        android:id="@+id/l6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:background="#000000">
        <ImageView
            android:id="@+id/line_view6"
            android:layout_width="3px"
            android:layout_height="220dp"
            android:background="#00FFFF" />
    </FrameLayout>
    <FrameLayout
        tools:ignore="MissingConstraints"
        android:id="@+id/l7"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:background="#000000">
        <ImageView
            android:id="@+id/line_view7"
            android:layout_width="3px"
            android:layout_height="220dp"
            android:background="#FFFF00" />
    </FrameLayout>
<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/home_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="32dp"
    android:contentDescription="@string/back"
    app:srcCompat="@drawable/ic_home" 
    app:layout_constraintBottom_toBottomOf="parent"
    app:fabSize="mini"
    app:maxImageSize="30dp"
    app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
